<resources>
    <string name="app_name">Convert Rupiah to Dollar</string>
    <string name="textViewJudul">Selamat Mengubah Rupiah ke Dollar</string>
    <string name="textViewSatuanUkur">Convert Rupiah to Dollar</string>
    <string name="inputanRupiah">Masukkan Jumlah Uang</string>
    <string name="buttonHitung">Rupiah to Dollar</string>
    <string name="textViewHasil">Hasil Convert</string>
    <string name="hasil_x">Total: $ %1$.2f</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="courtesy">Aplikasi COD adalah aplikasi yang digunakan untuk mengkonversi nilai
    mata uang Rupiah ke Dollar atau nilai mata uang Dollar ke Rupiah</string>
    <string name="bagikan">Bagikan</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="histori">Histori</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="bagikan_template"> %1$s</string>
    <string name="koneksi_error">Koneksi Error</string>
    <string name="nilai_euro">$1,08</string>
    <string name="nama_euro">Euro</string>
    <string name="message">%1$s diklik!</string>
    <string name="lihat_kurs">Lihat Kurs</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data convert to dollar otomatis</string>
    <string name="notif_title">Ayo coba Konversi!</string>
    <string name="notif_text">Coba sekarang biar nggak penasaran..</string>

</resources>